[package]
name = "ktorrent-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
jiff = "0.2"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
zbus = "5.7"
zbus_xml = "5.0"
# compatible with zbus_xml
quick-xml = "0.36"
serde = "1"
serde_bencode = "0.2"
byte-unit = "5.1"
termion = "4.0"